# test_project

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: main.rs
t1/: Cargo.toml
t1/src/: main.rs
t2/src/: main.rs
