[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
chrono = "0.4"
futures = "0.3"
reqwest = "0.11"
rusqlite = { version = "0.29", features = ["bundled", "chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "fast-rng"], optional = true }
webweg = { version = "0.9", features = ["multi"] }

[features]
default = []
auth = []